# TrajectoryPlanning

./: .gitignore  README.md
matlab_launcher/: main.py  on_startup.m
src/: config.py  engine_connector.py  main.py
src/MatlabLauncher/: .gitignore  config.py  main.py  onStartup.m
src/MatlabLauncher/utils/: fileio.py
src/RobotSimulator/: .gitignore  launch.bash
src/RobotSimulator/shell/: launch.bash  launch.bat  setup.bat
src/RobotSimulator/src/robot_sim/: CMakeLists.txt  package.xml
src/RobotSimulator/src/robot_sim/config/: robot_control.yaml
src/RobotSimulator/src/robot_sim/launch/: main.launch  markers.spawn.launch  obstacle_spawn.launch  obstacles.spawn.launch  robot.control.launch  robot_spawn.launch
src/RobotSimulator/src/robot_sim/src/: place_markers.cpp  place_target.cpp  step_world.cpp  time_estimator.h
src/RobotSimulator/src/robot_sim/srv/: PlaceMarkers.srv  PlaceTarget.srv  StepWorld.srv
src/RobotSimulator/src/robot_sim/urdf/: markers.xacro  obstacle.xacro  obstacles.xacro  robot.xacro  shared.xacro
src/RobotSimulator/src/robot_sim/worlds/: empty.world
src/TrajectoryPlanning/: README.md  config.py  main.py  test.py  train.py
src/TrajectoryPlanning/envs/: __init__.py  game_state.py  reward.py  simulator.py  state.py
src/TrajectoryPlanning/framework/: _replay_buffer.py  agent.py  configuration.py  ddpg.py  evaluator.py  game.py  geometry.py  model.py  planner.py  plot.py  random_process.py  replay_buffer.py  robot.py  state.py  workspace.py
src/TrajectoryPlanning/models/: __init__.py  utils.py
src/TrajectoryPlanning/shell/: ros.bash
src/TrajectoryPlanning/simulator/: __init__.py  engine.py  game_state.py  getPos.m  (+13 more)
src/_unsorted/: her.py
src/framework/: ddpg.py  game.py  layer.py  model.py  state.py
src/matlab/: getPos.m  getRobot.m  monitor.m  robotBodyDesc.m  sim_initialize.m  sim_reset.m  sim_stage.m  sim_step.m  updateState.m
src/simulator/: conversion.py  engine.py  simulator.py
(+102 files in other folders)
